# Geotag_Ros2

src/geocam/: CMakeLists.txt  package.xml
src/geocam/src/: buffer.cpp  cam_pub.cpp  cam_sub.cpp  image_bytes.cpp  imagesave.cpp  trigger.cpp
