<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geocam</name>
  <version>0.0.0</version>
  <description>Live Streaming and geotagging</description>
  <maintainer email="karthikeyab68@gmail.com">karthikeya</maintainer>
  <license>Apache license 2.0</license>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>std_msgs</depend>
   <build_depend>message_generation</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
